# cat-page

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  AGENTS.md  Dockerfile  README.md  catalog-info.yaml  docker-compose.yaml  env.example  index.html  mkdocs.yaml  objects.inv  package.json  pyproject.toml  renovate.json  requirements-dev.txt  requirements.txt  ruff.toml  setup.cfg  setup.py
.github/: AGENTS.md  FUNDING.yml  cr.yaml  ct.yaml  dependabot.yml
.github/workflows/: main.yaml  release.yaml  schedule.yaml  semantic-release.yaml
AGENTS/: index.html
app/: AGENTS.md  server.py
app/static/: manifest.json  sw.js
app/templates/: index.html  sw.js
charts/: AGENTS.md
charts/catpage/: Chart.yaml  values.yaml
charts/catpage/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/catpage/templates/tests/: test-connection.yaml
configuration/: index.html
contributing/: index.html
docs/: AGENTS.md  configuration.md  contributing.md  gen_ref_pages.py  getting-started.md  llms.txt
docs/css/: style.css
getting-started/: index.html
overrides/: home.html
reference/SUMMARY/: index.html
reference/app/: index.html
search/: search_index.json
tests/: AGENTS.md  conftest.py  test_api.py  test_cat.py  test_manifest.py  test_rick.py  test_service_worker.py
