[tool.poetry]
name = "cat-page"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "RaBe Cat Landing Page"
repository = "https://github.com/radiorabe/cat-page"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPL-3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "app/py.typed" },
]

[tool.poetry.scripts]
catpage = 'app.server:main'

[tool.poetry.dependencies]
python = "^3.11"
Werkzeug = "^3.1.3"
Jinja2 = "^3.1.5"
configargparse = "^1.7"
CherryPy = "^18.10.0"
cachelib = "^0.13.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mypy = "^0.10.3"
pytest-random-order = "^1.1.1"
pytest-ruff = "^0.4"
ruff = "^0.9.2"

[tool.pytest.ini_options]
addopts = "-ra -q --random-order --doctest-glob='*.md' --doctest-modules --cov=app --cov-fail-under=100 --ruff --mypy --ignore docs/"
filterwarnings = ["ignore::DeprecationWarning:pkg_resources", "ignore::DeprecationWarning:cherrypy"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
