[tool.poetry]
name = "cat-page"
version = "0.0.0" # 0.0.0 placeholder is replaced on release
description = "RaBe Cat Landing Page"
repository = "https://github.com/radiorabe/cat-page"
authors = ["RaBe IT-Reaktion <it@rabe.ch>"]
license = "AGPL-3"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
readme = "README.md"
packages = [
    { include = "app" },
    { include = "app/py.typed" },
]

[tool.poetry.scripts]
catpage = 'app.server:main'

[tool.poetry.dependencies]
python = "^3.12"
starlette = "^0.52.1"
Jinja2 = "^3.1.6"
configargparse = "^1.7"
uvicorn = {version = "^0.42.0", extras = ["standard"]}
cachelib = "^0.13.0"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pytest-mypy = "^1.0.1"
pytest-random-order = "^1.2.0"
pytest-ruff = "^0.5"
ruff = "^0.15.6"

[tool.pytest.ini_options]
minversion = "9.0"
addopts = ["-ra", "-q", "--random-order", "--doctest-glob=*.md", "--doctest-modules", "--cov=app", "--cov-fail-under=100", "--ruff", "--mypy", "--ignore=docs/"]
filterwarnings = ["ignore::DeprecationWarning:pkg_resources"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
